Home e problemas feita sem responsiidade.

--- a/index.html
+++ b/index.html
@@ -10,37 +10,49 @@
 <body>
     <div class="container-grid">
         <header>
-            <h1>TECHPULSE GLOBAL NETWORK</h1>
+            <a href="./index.html">
+                <img id="logo-cabecalho" src="./img/logo.png" alt="Logo TPGN">
+            </a>
+            <h1 id="titulo-cabecalho">TECHPULSE GLOBAL NETWORK</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Challenge</a></li>
-                    <li><a href="#">Problema</a></li>
+                    <li><a href="#main">Home</a></li>
+                    <li><a href="#problema">Problema</a></li>
                     <li><a href="#">Solução</a></li>
                     <li><a href="#">Demonstração</a></li>
-                    <li><a href="#">Impactos</a></li>
-                    <li><a href="#">Suporte</a></li>
+                    <li><a href="#">Vantagens</a></li>
                 </ul>
             </nav>
         </header>
 
-        <main>
+        <main id="main">
             <div class="containeir-home">
-                <img src="" alt="">
-                <h1>TechPulse Global Network</h1>
-                <div>
-                    <h2>Quem Somos ?</h2>
-                    <p>TechPulse Global Network é uma empresa de tecnologia inovadora e global que oferece soluções de ponta para empresas e organizações de todo o mundo. Com uma equipe de especialistas altamente qualificados em tecnologia da informação, inteligência artificial, análise de dados e muito mais, a TechPulse Global Network oferece uma ampla gama de serviços personalizados para atender às necessidades específicas de cada cliente.</p>
-                </div>
-                <div>
-                    <h2>Nossos Objetivos</h2>
-                    <p>A empresa tem como objetivo fornecer soluções eficientes e eficazes, ajudando seus clientes a atingir seus objetivos de negócios com sucesso. Desde a implementação de tecnologias de ponta até a análise de dados e a criação de soluções personalizadas, a TechPulse Global Network está comprometida em fornecer o melhor suporte possível aos seus clientes.</p>
-                    <p>Além disso, a TechPulse Global Network tem como foco principal a inovação e o desenvolvimento de tecnologias de ponta, garantindo que seus clientes estejam sempre na vanguarda da tecnologia. Com uma forte presença global, a empresa está preparada para atender às necessidades dos clientes em todo o mundo, oferecendo soluções confiáveis e de alta qualidade para empresas de todos os tamanhos e setores.</p>
+                <h1 id="titulo-home">AmbuZone</h1>
+                <h2 id="sub-home">Menos Acidentes, Mais Vidas: A História de Sucesso do Nosso Projeto de Semáforo Inteligente</h2>
+                <div class="btn-projeto">
+                    <a href="">Conheça nosso projeto →</a>
                 </div>
             </div>
         </main>
 
+        <section id="problema" class="problema">
+            <div class="container-problema">
+                <h1 id="titulo-problema">Dificuldades encontradas no dia a dia:</h1>
+                <p id="sub-problema">Em situações críticas como paradas cardíacas e acidentes graves, cada segundo conta. É vital que as ambulâncias cheguem rapidamente ao local. No entanto, enfrentamos desafios:</p>
+            </div>
+            <div class="fundo-problema">
+                <ul>
+                    <li><b>Atrasos no Atendimento:</b> Ambulâncias mal organizadas podem demorar, agravando a saúde do paciente.</li>
+                    <li id="item2-lista-problema"><b>Falta de Equipamentos e Recursos:</b> Cada caso requer equipamentos específicos. Ambulâncias inadequadas comprometem o atendimento.</li>
+                    <li><b>Falhas na Comunicação:</b> Comunicação deficiente leva a erros diagnósticos e atrasos no tratamento.</li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="linha"></div>
+
         <section>
+            
         </section>
     </div>
     
