Demonstração feita + iniciando vantagens.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#main">Home</a></li>
                     <li><a href="#problema">Problema</a></li>
                     <li><a href="#solucao">Solução</a></li>
-                    <li><a href="#">Demonstração</a></li>
+                    <li><a href="#demonstracao">Demonstração</a></li>
                     <li><a href="#">Vantagens</a></li>
                 </ul>
             </nav>
@@ -105,9 +105,40 @@
 
         <div class="linha2"></div>
 
-        <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/K0KRYYE5VfE?si=iibVN6aUvJK2tFn-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <section id="demonstracao" class="demonstracao">
+            <div class="container-demonstracao">
+                <h1>Revolução no Tráfego Urbano: A Solução para São Paulo</h1>
+                <h2>Veja como nossa tecnologia está revolucionando o tráfego de emergência em São Paulo em nosso vídeo. Reduzimos atrasos, salvamos vidas e criamos um ambiente de tráfego mais seguro:</h2>
+                <iframe class="video-yt" src="https://www.youtube.com/embed/K0KRYYE5VfE?si=iibVN6aUvJK2tFn-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </section>
+
+        <div class="linha3"></div>
+
+        <section class="vantagens" id="vantagens">
+            <div class="container-vantagens">
+                <h1></h1>
+                <h2></h2>
+                <div>
+                    <h1></h1>
+                    <h2></h2>
+                </div>
+                <div>
+                    <h1></h1>
+                    <h2></h2>
+                </div>
+                <div>
+                    <h1></h1>
+                    <h2></h2>
+                </div>
+                <div>
+                    <h1></h1>
+                    <h2></h2>
+                </div>
+            </div>
+        </section>
+
+
     </div>
     
 
