--- a/index.html
+++ b/index.html
@@ -117,23 +117,30 @@
 
         <section class="vantagens" id="vantagens">
             <div class="container-vantagens">
-                <h1></h1>
-                <h2></h2>
+                <h1>Vantagens do Sistema de Tráfego de Emergência Inteligente</h1>
                 <div>
-                    <h1></h1>
-                    <h2></h2>
-                </div>
-                <div>
-                    <h1></h1>
-                    <h2></h2>
-                </div>
-                <div>
-                    <h1></h1>
-                    <h2></h2>
-                </div>
-                <div>
-                    <h1></h1>
-                    <h2></h2>
+
+                    <div>
+                        <img src="./img/seguranca.png" alt="Ícone Segurança">
+                        <h1>Segurança</h1>
+                        <h2>Minimiza o risco de acidentes envolvendo veículos de emergência.</h2>
+                    </div>
+                    <div>
+                        <img src="./img/eficiencia.png" alt="Ícone Eficiência">
+                        <h1>Eficiência</h1>
+                        <h2>Permite que as ambulâncias cheguem ao local mais rápido.</h2>
+                    </div>
+                    <div>
+                        <img src="./img/precisao.png" alt="Ícone Precisão">
+                        <h1>Precisão</h1>
+                        <h2>O sistema responde ao caminho definido pela ambulância, evitando interferências indevidas.</h2>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h1>Simplicidade</h1>
+                        <h2>Tudo acontece de forma automática, sem a necessidade de intervenção humana.</h2>
+                    </div>
+
                 </div>
             </div>
         </section>
