--- a/index.html
+++ b/index.html
@@ -117,30 +117,28 @@
 
         <section class="vantagens" id="vantagens">
             <div class="container-vantagens">
-                <h1>Vantagens do Sistema de Tráfego de Emergência Inteligente</h1>
-                <div>
-
-                    <div>
+                <h1 id="titulo-vantagens">Vantagens do Sistema de Tráfego de Emergência Inteligente</h1>
+                <div class="container-icons">
+                    <div class="icons">
                         <img src="./img/seguranca.png" alt="Ícone Segurança">
-                        <h1>Segurança</h1>
-                        <h2>Minimiza o risco de acidentes envolvendo veículos de emergência.</h2>
+                        <h1 id="titulo-seguranca">Segurança</h1>
+                        <p>Minimiza o risco de acidentes envolvendo veículos de emergência.</p>
                     </div>
-                    <div>
+                    <div class="icons">
                         <img src="./img/eficiencia.png" alt="Ícone Eficiência">
-                        <h1>Eficiência</h1>
-                        <h2>Permite que as ambulâncias cheguem ao local mais rápido.</h2>
+                        <h1 id="titulo-eficiencia">Eficiência</h1>
+                        <p>Permite que as ambulâncias cheguem ao local mais rápido.</p>
                     </div>
-                    <div>
+                    <div class="icons">
                         <img src="./img/precisao.png" alt="Ícone Precisão">
-                        <h1>Precisão</h1>
-                        <h2>O sistema responde ao caminho definido pela ambulância, evitando interferências indevidas.</h2>
+                        <h1 id="titulo-precisao">Precisão</h1>
+                        <p>O sistema responde ao caminho definido pela ambulância, evitando interferências indevidas.</p>
                     </div>
-                    <div>
-                        <img src="" alt="">
-                        <h1>Simplicidade</h1>
-                        <h2>Tudo acontece de forma automática, sem a necessidade de intervenção humana.</h2>
+                    <div class="icons">
+                        <img src="./img/simplicidade.png" alt="Ícone Simolicidade">
+                        <h1 id="titulo-simplicidade">Simplicidade</h1>
+                        <p>Tudo acontece de forma automática, sem a necessidade de intervenção humana.</p>
                     </div>
-
                 </div>
             </div>
         </section>
