cabecalho iniciado e finalizado

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TechPulse Global Network</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
+    <script src="https://kit.fontawesome.com/3036b466d5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-grid">
@@ -143,6 +144,50 @@
             </div>
         </section>
 
+        <footer>
+            <div class="logo">
+                <img src="./img/Logo(SemFundo)padrao.png" alt="logo TPGN">
+            </div>
+            <div class="textos-rodape">
+                <div class="inicio">
+                    <p class="titulos-rodape"><b>Início</b></p>
+                    <p>Home</p>
+                    <p>Problema</p>
+                    <p>Solução</p>
+                    <p>Demonstração</p>
+                    <p>Vantagens</p>
+                </div>
+                <div class="sobre-nos">
+                    <p class="titulos-rodape"><b>Sobre nós</b></p>
+                    <p>Informações 
+                    <br>da Empresa</p>
+                    <p>Contato</p>
+                    <p>Blog</p>
+                </div>
+                <div class="suporte">
+                    <p class="titulos-rodape"><b>Suporte</b></p>
+                    <p>FAQ</p>
+                    <p>Telefones</p>
+                    <p>Chat</p>
+                </div>
+            </div>
+            <div class="contatos">
+                <div class="icons-rodape">
+                    <a href="#">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCiROhuCJ7ZqMaeTLnF_wlpA" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </div>
+                <div class="botao-contato">
+                <button >Contato</button>
+                </div>
+            </div>
+        </footer>
 
     </div>
     
