--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
                 <img id="logo-cabecalho" src="./img/logo.png" alt="Logo TPGN">
             </a>
             <h1 id="titulo-cabecalho">TECHPULSE GLOBAL NETWORK</h1>
-            <nav>
+            <h1 id="titulo-cabecalho-mobile">TPGN</h1>
+            <nav id="menu-desktop">
+                <ul>
+                    <li><a href="#main">Home</a></li>
+                    <li><a href="#problema">Problema</a></li>
+                    <li><a href="#solucao">Solução</a></li>
+                    <li><a href="#demonstracao">Demonstração</a></li>
+                    <li><a href="#">Vantagens</a></li>
+                </ul>
+            </nav>
+            
+            <nav id="menu-mobile">
                 <ul>
                     <li><a href="#main">Home</a></li>
                     <li><a href="#problema">Problema</a></li>
@@ -58,21 +69,21 @@
                 <h2 id="sub-solucao">Imagine um sistema revolucionário que torna o tráfego de veículos de emergência mais eficiente e seguro. Nossa solução inovadora combina tecnologia de ponta com sensores de proximidade em veículos de resgate e semáforos, garantindo um caminho claro para as ambulâncias chegarem ao seu destino rapidamente.</h2>
                 <div class="containeir-como-funciona-solucao">
                     <div class="quadrado">
-                        <div id="box-numero1" class="box-numero">
+                        <div id="numero1" class="box-numero">
                             <h1 class="numero">1</h1>
                         </div>
                         <h1 id="titulo-quadrado-1" class="titulo-quadrado">Sensores de Proximidade</h1>
                         <h2>Instalamos sensores de proximidade em ambulâncias e semáforos.</h2>
                     </div>
                     <div class="quadrado">
-                        <div id="box-numero2" class="box-numero">
+                        <div class="box-numero">
                             <h1 class="numero">2</h1>
                         </div>
                         <h1 id="titulo-quadrado-2" class="titulo-quadrado">GPS Pré-estabelecido</h1>
                         <h2>O GPS da ambulância define o caminho, garantindo que apenas os semáforos ao longo da rota sejam afetados, evitando interferências desnecessárias.</h2>
                     </div>
                     <div class="quadrado">
-                        <div id="box-numero3" class="box-numero">
+                        <div class="box-numero">
                             <h1 class="numero">3</h1>
                         </div>
                         <h1 id="titulo-quadrado-3" class="titulo-quadrado">Ativação do Sinal de Emergência</h1>
@@ -86,14 +97,14 @@
                         <h2>Se houver uma mudança de rota repentina, nosso sistema ajusta os semáforos de acordo com o novo trajeto da ambulância.</h2>
                     </div>
                     <div class="quadrado">
-                        <div id="box-numero5" class="box-numero">
+                        <div class="box-numero">
                             <h1 class="numero">5</h1>
                         </div>
                         <h1 id="titulo-quadrado-5" class="titulo-quadrado">Gestão de Cruzamentos</h1>
                         <h2>Em cruzamentos, o sistema reconhece e fecha os semaforos das vias que cruzam o caminho da ambulância, assim liberando o caminho.</h2>
                     </div>
                     <div class="quadrado">
-                        <div id="box-numero6" class="box-numero">
+                        <div class="box-numero">
                             <h1 class="numero">6</h1>
                         </div>
                         <h1 id="titulo-quadrado-6" class="titulo-quadrado">Corredores Abertos</h1>
