começando menu mobile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechPulse Global Network</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/3036b466d5.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,8 +25,14 @@
                     <li><a href="#">Vantagens</a></li>
                 </ul>
             </nav>
+
+            <div class="box-menu-mobile">
+                <div class="linha1-menu"></div>
+                <div class="linha2-menu"></div>
+                <div class="linha3-menu"></div>
+            </div>
             
-            <nav id="menu-mobile">
+            <nav id="menu-mobile" class="menu-mobile close">
                 <ul>
                     <li><a href="#main">Home</a></li>
                     <li><a href="#problema">Problema</a></li>
