Responsividade nas seções vantagens e solução

--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
             </div>
         </section>
 
-        <div class="linha1"></div>
-
         <section class="solucao" id="solucao">
             <div class="container-solucao">
                 <h1 id="titulo-solucao">Melhorando o Tráfego de Emergência com Semáforos Inteligentes</h1>
-                <h2 id="sub-solucao">Imagine um sistema revolucionário que torna o tráfego de veículos de emergência mais eficiente e seguro. Nossa solução inovadora combina tecnologia de ponta com sensores de proximidade em veículos de resgate e semáforos, garantindo um caminho claro para as ambulâncias chegarem ao seu destino rapidamente.</h2>
+                <p id="sub-solucao">Imagine um sistema revolucionário que torna o tráfego de veículos de emergência mais eficiente e seguro. Nossa solução inovadora combina tecnologia de ponta com sensores de proximidade em veículos de resgate e semáforos, garantindo um caminho claro para as ambulâncias chegarem ao seu destino rapidamente.</p>
                 <div class="containeir-como-funciona-solucao">
                     <div class="quadrado">
                         <div id="numero1" class="box-numero">
@@ -82,14 +80,14 @@
                         <h2>Instalamos sensores de proximidade em ambulâncias e semáforos.</h2>
                     </div>
                     <div class="quadrado">
-                        <div class="box-numero">
+                        <div id="box-numero2" class="box-numero">
                             <h1 class="numero">2</h1>
                         </div>
                         <h1 id="titulo-quadrado-2" class="titulo-quadrado">GPS Pré-estabelecido</h1>
                         <h2>O GPS da ambulância define o caminho, garantindo que apenas os semáforos ao longo da rota sejam afetados, evitando interferências desnecessárias.</h2>
                     </div>
                     <div class="quadrado">
-                        <div class="box-numero">
+                        <div id="box-numero3" class="box-numero">
                             <h1 class="numero">3</h1>
                         </div>
                         <h1 id="titulo-quadrado-3" class="titulo-quadrado">Ativação do Sinal de Emergência</h1>
@@ -103,14 +101,14 @@
                         <h2>Se houver uma mudança de rota repentina, nosso sistema ajusta os semáforos de acordo com o novo trajeto da ambulância.</h2>
                     </div>
                     <div class="quadrado">
-                        <div class="box-numero">
+                        <div id="box-numero5" class="box-numero">
                             <h1 class="numero">5</h1>
                         </div>
                         <h1 id="titulo-quadrado-5" class="titulo-quadrado">Gestão de Cruzamentos</h1>
                         <h2>Em cruzamentos, o sistema reconhece e fecha os semaforos das vias que cruzam o caminho da ambulância, assim liberando o caminho.</h2>
                     </div>
                     <div class="quadrado">
-                        <div class="box-numero">
+                        <div id="box-numero6" class="box-numero">
                             <h1 class="numero">6</h1>
                         </div>
                         <h1 id="titulo-quadrado-6" class="titulo-quadrado">Corredores Abertos</h1>
@@ -121,17 +119,13 @@
             </div>
         </section>
 
-        <div class="linha2"></div>
-
         <section id="demonstracao" class="demonstracao">
             <div class="container-demonstracao">
                 <h1>Revolução no Tráfego Urbano: A Solução para São Paulo</h1>
                 <h2>Veja como nossa tecnologia está revolucionando o tráfego de emergência em São Paulo em nosso vídeo. Reduzimos atrasos, salvamos vidas e criamos um ambiente de tráfego mais seguro:</h2>
-                <iframe class="video-yt" src="https://www.youtube.com/embed/K0KRYYE5VfE?si=iibVN6aUvJK2tFn-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="video-yt" src="https://www.youtube.com/embed/XG2X_O7UfWo?si=SZxIQ8N_tRViAdWU" title="Desvendando a Arquitetura dos Semáforos Inteligentes: O futuro das ruas e estradas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-
-        <div class="linha3"></div>
 
         <section class="vantagens" id="vantagens">
             <div class="container-vantagens">
@@ -147,12 +141,12 @@
                         <h1 id="titulo-eficiencia">Eficiência</h1>
                         <p>Permite que as ambulâncias cheguem ao local mais rápido.</p>
                     </div>
-                    <div class="icons">
+                    <div id="icon-precisao" class="icons">
                         <img src="./img/precisao.png" alt="Ícone Precisão">
                         <h1 id="titulo-precisao">Precisão</h1>
                         <p>O sistema responde ao caminho definido pela ambulância, evitando interferências indevidas.</p>
                     </div>
-                    <div class="icons">
+                    <div id="icon-simplicidade" class="icons">
                         <img src="./img/simplicidade.png" alt="Ícone Simolicidade">
                         <h1 id="titulo-simplicidade">Simplicidade</h1>
                         <p>Tudo acontece de forma automática, sem a necessidade de intervenção humana.</p>
