--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#problema">Problema</a></li>
                     <li><a href="#solucao">Solução</a></li>
                     <li><a href="#demonstracao">Demonstração</a></li>
-                    <li><a href="#">Vantagens</a></li>
+                    <li><a href="#vantagens">Vantagens</a></li>
                 </ul>
             </nav>
 
@@ -38,7 +38,7 @@
                     <li><a href="#problema">Problema</a></li>
                     <li><a href="#solucao">Solução</a></li>
                     <li><a href="#demonstracao">Demonstração</a></li>
-                    <li><a href="#">Vantagens</a></li>
+                    <li><a href="#vantagens">Vantagens</a></li>
                 </ul>
             </nav>
         </header>
@@ -162,24 +162,23 @@
             <div class="textos-rodape">
                 <div class="inicio">
                     <p class="titulos-rodape"><b>Início</b></p>
-                    <p>Home</p>
-                    <p>Problema</p>
-                    <p>Solução</p>
-                    <p>Demonstração</p>
-                    <p>Vantagens</p>
+                    <a href="#">Home</a>
+                    <a href="#">Problema</a>
+                    <a href="#">Solução</a>
+                    <a href="#">Demonstração</a>
+                    <a href="#">Vantagens</a>
                 </div>
                 <div class="sobre-nos">
                     <p class="titulos-rodape"><b>Sobre nós</b></p>
-                    <p>Informações 
-                    <br>da Empresa</p>
-                    <p>Contato</p>
-                    <p>Blog</p>
+                    <a href="#">Informações da Empresa</a>
+                    <a href="#">Contato</a>
+                    <a href="#">Blog</a>
                 </div>
                 <div class="suporte">
                     <p class="titulos-rodape"><b>Suporte</b></p>
-                    <p>FAQ</p>
-                    <p>Telefones</p>
-                    <p>Chat</p>
+                    <a href="#">FAQ</a>
+                    <a href="#">Telefone</a>
+                    <a href="#">Chat</a>
                 </div>
             </div>
             <div class="contatos">
