resgatando os links do menu

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             
             <nav id="menu-mobile" class="menu-mobile close">
                 <ul>
-                    <li><a href="#main">Home</a></li>
-                    <li><a href="#problema">Problema</a></li>
-                    <li><a href="#solucao">Solução</a></li>
-                    <li><a href="#demonstracao">Demonstração</a></li>
-                    <li><a href="#vantagens">Vantagens</a></li>
+                    <li><a id="menu-mobile-main" href="#main">Home</a></li>
+                    <li><a id="menu-mobile-problema" href="#problema">Problema</a></li>
+                    <li><a id="menu-mobile-solucao" href="#solucao">Solução</a></li>
+                    <li><a id="menu-mobile-demonstracao" href="#demonstracao">Demonstração</a></li>
+                    <li><a id="menu-mobile-vantagens" href="#vantagens">Vantagens</a></li>
                 </ul>
             </nav>
         </header>
