criação do botão login

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="#demonstracao">Demonstração</a></li>
                     <li><a href="#vantagens">Vantagens</a></li>
                 </ul>
+                <button class="login">Login</button>
             </nav>
 
             <div class="box-menu-mobile">
@@ -40,7 +41,11 @@
                     <li><a id="menu-mobile-demonstracao" href="#demonstracao">Demonstração</a></li>
                     <li><a id="menu-mobile-vantagens" href="#vantagens">Vantagens</a></li>
                 </ul>
+                <div class="box-login-mobile">
+                    <button class="login-mobile">Login</button> q
+                </div>
             </nav>
+
         </header>
 
         <main id="main">
